--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
   <title>Soft Touch Carpets &amp; Elegant Edges | Bespoke Flooring Solutions</title>
   <meta 
     name="description" 
-    content="Step into comfort with Soft Touch Carpets & Elegant Edges. Trusted for 40+ years, we specialise in carpet fitting, stair runners, vinyl flooring, and custom mat services in Hertfordshire and beyond." 
+    content="Step into comfort with Soft Touch Carpets & Elegant Edges. Trusted with 38 years experience, we specialise in carpet fitting, stair runners, vinyl flooring, and custom mat services in Hertfordshire and beyond." 
   />
   <meta 
     name="keywords" 
-    content="carpet fitting near me, stair runners, vinyl flooring, custom mat whipping, Hertfordshire carpet fitting, 40 years experience"
+    content="carpet fitting near me, stair runners, vinyl flooring, custom mat whipping, Hertfordshire carpet fitting, 38 years experience"
   />
 
   <!-- Google Fonts (Playfair Display, Montserrat, Nunito) -->
@@ -42,7 +42,7 @@
     "@context": "https://schema.org",
     "@type": "LocalBusiness",
     "name": "Soft Touch Carpets & Elegant Edges",
-    "description": "Carpet fitting, stair runner installation, vinyl flooring, and mat whipping services in Hertfordshire. Over 40 years of experience.",
+    "description": "Carpet fitting, stair runner installation, vinyl flooring, and custom mat services in Hertfordshire. With 38 years experience.",
     "telephone": "+44 7768 106205",
     "address": {
       "@type": "PostalAddress",
@@ -62,8 +62,9 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-brown sticky-top shadow-sm ">
     <div class="container">
       <a class="navbar-brand d-flex flex-column text-lg-start" href="index.html">
-        <span class="fw-bold fs-5">Soft Touch</span>
-        <span class="fs-6">Carpets & Elegant Edges</span>
+        <!-- Updated to make "Soft Touch Carpets" bold and "& Elegant Edges" normal -->
+        <span class="fw-bold fs-5">Soft Touch Carpets</span>
+        <span class="fs-6">& Elegant Edges</span>
       </a>
       
       <button 
@@ -103,8 +104,8 @@
     <div class="container text-white text-center z-index-2">
       <h1 class="display-3 fw-bold hero-title mb-4">Step Into Luxurious Comfort</h1>
       <p class="lead hero-subtitle mb-5">
-        Premium carpet fitting, stair runners, and bespoke mat services 
-        for Hertfordshire &amp; beyond. Over 40 years of transforming homes.
+        Affordable carpets supplied and fitted, stair runners, and bespoke mat services 
+        for Hertfordshire &amp; beyond with 38 years of transforming homes.
       </p>
       <a href="services.html" class="btn btn-tan btn-lg">
         Explore Our Services
@@ -117,6 +118,7 @@
     <div class="container">
       <div class="row align-items-center g-5">
         <div class="col-lg-6 text-center text-lg-start">
+          <!-- You will change the actual image to a nicer carpet image later -->
           <img 
             src="luxury-carpet.jpg" 
             alt="Luxurious carpet example" 
@@ -126,13 +128,13 @@
         <div class="col-lg-6">
           <h2 class="section-heading mb-4">Why Choose Us?</h2>
           <p class="fs-5 mb-4">
-            At Soft Touch Carpets &amp; Elegant Edges, we bring four decades of experience, 
+            At Soft Touch Carpets &amp; Elegant Edges, we bring with 38 years experience, 
             NVQ-qualified fitters, and a passion for design to every project. Our family-run 
             ethos ensures you get personal, attentive service—no matter the size or scope.
           </p>
           <ul class="list-unstyled">
-            <li class="mb-2"><strong>40+ years</strong> in the flooring industry</li>
-            <li class="mb-2">Wide range of <strong>bleach-cleanable carpets</strong></li>
+            <li class="mb-2"><strong>With 38 years experience</strong> in the flooring industry</li>
+            <li class="mb-2">Wide range of <strong>carpets to suit every budget</strong></li>
             <li class="mb-2">Free <strong>measuring</strong> &amp; estimating services</li>
             <li class="mb-2">Expert <strong>stair runner</strong> installation &amp; custom mat whipping</li>
             <li class="mb-2">Serving <strong>Hertfordshire</strong> &amp; a 20–40 mile radius</li>
@@ -150,7 +152,7 @@
         <div class="col-lg-8 mx-auto">
           <h2 class="section-heading">Crafted With Care</h2>
           <p class="fs-5">
-            Whether it’s plush carpeting, sleek vinyl floors, or a statement stair runner, 
+            Whether it’s plush carpeting, sleek vinyl floors, or a statement staircase, 
             our dedicated team ensures every detail is handled meticulously. 
             Discover a glimpse of what we offer below.
           </p>
@@ -178,12 +180,14 @@
           <div class="service-block p-4 text-center bg-white shadow-sm rounded">
             <img 
               src="stair-runners.jpg" 
-              alt="Stair Runners" 
+              alt="Stairs & Landing Carpet" 
               class="img-fluid rounded mb-3"
             >
-            <h4 class="text-brown">Stair Runners</h4>
+            <!-- Changed text from Stair Runners to Stairs & Landing Carpet -->
+            <h4 class="text-brown">Stairs &amp; Landing Carpet</h4>
             <p class="mt-2">
-              Transform your staircase into a luxurious focal point, with custom edging &amp; rods.
+              Transform your staircase into a luxurious focal point, with custom edging.
+              <!-- Removed reference to rods -->
             </p>
             <a href="services.html" class="btn btn-tan">
               Upgrade Your Stairs &rarr;
@@ -227,8 +231,6 @@
     </div>
   </section>
 
-  
-
   <!-- SERVICE AREAS SECTION -->
   <section class="py-5 bg-light">
     <div class="container">
@@ -237,9 +239,10 @@
           <h2 class="section-heading mb-4">
             We’re Local. We’re Flexible.
           </h2>
+          <!-- Changed "Based in Hatfield" to "Based in St Albans" & swapped "includes St Albans" to "includes Hatfield" -->
           <p class="fs-5 mb-4">
-            Based in <strong>Hatfield</strong>, we serve all of <strong>Hertfordshire</strong> plus 
-            a <strong>20–40 mile radius</strong>. This includes Welwyn Garden City, Cheshunt, St Albans, 
+            Based in <strong>St Albans</strong>, we serve all of <strong>Hertfordshire</strong> plus 
+            a <strong>20–40 mile radius</strong>. This includes Welwyn Garden City, Cheshunt, Hatfield, 
             Harpenden, and beyond. For larger projects, we’re happy to discuss travelling further. 
             Your dream floors are just a call away!
           </p>
@@ -257,8 +260,6 @@
     </div>
   </section>
 
-
-
   <!-- FINAL CTA SECTION -->
   <section class="py-5 text-center bg-cream">
     <div class="container">
@@ -266,7 +267,7 @@
         Experience the Soft Touch Difference
       </h2>
       <p class="fs-5 mb-4">
-        Transforming homes is our passion. Whether it’s carpet fitting, stair runners, 
+        Transforming homes is our passion. Whether it’s carpet fitting, stairs &amp; landing carpets, 
         vinyl flooring, or custom mats, we have the expertise to bring your vision to life.
       </p>
       <a href="contact.html" class="btn btn-tan btn-lg">
@@ -274,46 +275,51 @@
       </a>
     </div>
   </section>
-<!-- TESTIMONIALS SECTION: now with a brown background & white text -->
-<section class="py-5" style="background-color: var(--brown); color: #fff;">
-  <div class="container">
-    <div class="row mb-5 text-center">
-      <div class="col-lg-8 mx-auto">
-        <h2 class="section-heading text-white">What Our Clients Say</h2>
-        <p class="fs-5 text-white-50">
-          Real words from real homeowners who’ve trusted us with their floors. 
-          We value every review and strive to exceed your expectations.
-        </p>
-      </div>
-    </div>
-    <div class="row g-4">
-      <div class="col-md-6">
-        <div class="testimonial p-4 bg-white text-dark shadow-sm rounded">
-          <p class="mb-3">
-            "Soft Touch Carpets fitted our entire home. The living room 
-            carpet feels absolutely gorgeous underfoot. Highly recommended!"
+
+  <!-- TESTIMONIALS SECTION: now with a brown background & white text -->
+  <section class="py-5" style="background-color: var(--brown); color: #fff;">
+    <div class="container">
+      <div class="row mb-5 text-center">
+        <div class="col-lg-8 mx-auto">
+          <h2 class="section-heading text-white">What Our Clients Say</h2>
+          <p class="fs-5 text-white-50">
+            Real words from real homeowners who’ve trusted us with their floors. 
+            We value every review and strive to exceed your expectations.
           </p>
-          <strong>– Sarah W., Welwyn Garden City</strong>
         </div>
       </div>
-      <div class="col-md-6">
-        <div class="testimonial p-4 bg-white text-dark shadow-sm rounded">
-          <p class="mb-3">
-            "The stair runner exceeded our expectations! Perfectly measured, 
-            expertly edged, and fitted without any hassle. Great service!"
-          </p>
-          <strong>– Dean P., St Albans</strong>
+      <div class="row g-4">
+        <div class="col-md-6">
+          <div class="testimonial p-4 bg-white text-dark shadow-sm rounded">
+            <p class="mb-3">
+              "Soft Touch Carpets fitted our entire home. The living room 
+              carpet feels absolutely gorgeous underfoot. Highly recommended!"
+            </p>
+            <strong>– Sarah W., Welwyn Garden City</strong>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="testimonial p-4 bg-white text-dark shadow-sm rounded">
+            <p class="mb-3">
+              "The stair runner exceeded our expectations! Perfectly measured, 
+              expertly edged, and fitted without any hassle. Great service!"
+            </p>
+            <strong>– Dean P., St Albans</strong>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
+
   <!-- FOOTER -->
   <footer>
     <div class="container footer-content">
       <p>&copy; 2025 Soft Touch Carpets &amp; Elegant Edges</p>
       <p>Proudly serving Hertfordshire &amp; Surrounding Areas</p>
-      <p>Call: 07768 106205 | Email: <a href="mailto:info@softtouchcarpets.com" style="color:white;">info@softtouchcarpets.com</a></p>
+      <p>
+        Call: 07768 106205 | Email: 
+        <a href="mailto:softtouchcarpets100@gmail.com" style="color:white;">softtouchcarpets100@gmail.com</a>
+      </p>
     </div>
   </footer>
 
