--- a/about.html
+++ b/about.html
@@ -28,11 +28,11 @@
   <title>About Us | Soft Touch Carpets &amp; Elegant Edges</title>
   <meta
     name="description"
-    content="Discover how our family-run team at Soft Touch Carpets & Elegant Edges brings 40+ years of expertise to homes across Hertfordshire."
+    content="Discover how our expertise at Soft Touch Carpets & Elegant Edges—backed with 38 years experience—brings quality flooring to homes across Hertfordshire."
   />
   <meta
     name="keywords"
-    content="carpet fitting, stair runners, vinyl flooring, Hertfordshire, family-run, 40 years experience"
+    content="carpet fitting, stairs & landing carpet, vinyl flooring, Hertfordshire, 38 years experience"
   />
 
   <!-- Google Fonts (Playfair Display, Montserrat, Nunito) -->
@@ -49,7 +49,7 @@
     "@context": "https://schema.org",
     "@type": "LocalBusiness",
     "name": "Soft Touch Carpets & Elegant Edges",
-    "description": "Family-run carpet fitting and flooring business in Hertfordshire with over 40 years of experience, providing high-quality carpets, stair runners, vinyl flooring, and custom mat whipping.",
+    "description": "Carpet fitting and flooring services in Hertfordshire with 38 years experience—offering high-quality carpets, stairs & landing carpet, vinyl flooring, and custom mat whipping.",
     "telephone": "+44 7768 106205",
     "address": {
       "@type": "PostalAddress",
@@ -68,8 +68,8 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-brown sticky-top shadow-sm">
     <div class="container">
       <a class="navbar-brand d-flex flex-column text-lg-start" href="index.html">
-        <span class="fw-bold fs-5">Soft Touch</span>
-        <span class="fs-6">Carpets & Elegant Edges</span>
+        <span class="fw-bold fs-5">Soft Touch Carpets</span>
+        <span class="fs-6">& Elegant Edges</span>
       </a>
       <button
         class="navbar-toggler"
@@ -86,10 +86,10 @@
       <div class="collapse navbar-collapse justify-content-end" id="mainNavbar">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" href="index.html">Home</a>
+            <a class="nav-link " href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link active" href="about.html">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="services.html">Services</a>
@@ -107,10 +107,10 @@
     <div class="hero-overlay"></div>
     <div class="container text-center text-white">
       <h1 class="display-4 hero-title mb-3">
-        Our Family-Run Story
+        Our Story
       </h1>
       <p class="lead fw-normal hero-subtitle">
-        Quality flooring &amp; genuine care—passed down through generations
+        Quality flooring &amp; genuine care—backed with 38 years experience
       </p>
     </div>
   </header>
@@ -123,17 +123,10 @@
           <h2 class="section-heading mb-4">
             A Legacy of Excellence
           </h2>
+          <!-- Revised text per your request -->
           <p class="fs-5 m-3">
-            Soft Touch Carpets &amp; Elegant Edges began over
-            <strong>40 years</strong> ago, when <strong>Stephen Honeywood</strong> and
-            <strong>Maxine Phillips</strong> first shared their passion for high-quality
-            flooring with the people of Hertfordshire. Today, we remain a
-            family-run company that believes in <em>trust, craftsmanship</em>, and
-            a <em>personal touch</em> in every project.
-          </p>
-          <p class="fs-5 mb-0">
-            We may have grown in size, but our values remain the same—treat
-            customers like family and floors like art.
+            We've been doing this for 38 years, so you can trust us to do a great job. 
+            We care about our customers and treat every project like it's our own home.
           </p>
         </div>
       </div>
@@ -163,9 +156,10 @@
             <div class="card-body d-flex flex-column justify-content-center">
               <i class="bi bi-tools fs-1 text-brown mb-3"></i>
               <h4 class="text-brown mb-2">Quality Craftsmanship</h4>
+              <!-- Changed “installed to perfection” -> “installed to British Standards” -->
               <p class="mb-0">
-                <strong>NVQ-qualified</strong> fitters ensure your carpets, stair
-                runners, or vinyl floors are installed to perfection.
+                <strong>NVQ-qualified</strong> fitters ensure your carpets, stairs &amp; landing carpets, 
+                or vinyl floors are installed to British Standards.
               </p>
             </div>
           </div>
@@ -188,10 +182,10 @@
           <div class="card border-0 h-100 shadow-sm text-center flex-fill">
             <div class="card-body d-flex flex-column justify-content-center">
               <i class="bi bi-heart fs-1 text-brown mb-3"></i>
-              <h4 class="text-brown mb-2">Family Roots</h4>
+              <h4 class="text-brown mb-2">Personal Approach</h4>
               <p class="mb-0">
-                Being family-run means honest advice, personal attention, and
-                lasting relationships with the clients we serve.
+                We take pride in giving honest advice, personal attention, and
+                building lasting relationships with the clients we serve.
               </p>
             </div>
           </div>
@@ -200,66 +194,7 @@
     </div>
   </section>
 
-  <!-- TEAM GALLERY -->
-  <section class="py-5 bg-light text-center">
-    <div class="container">
-      <div class="row mb-5">
-        <div class="col-lg-8 mx-auto">
-          <h2 class="section-heading">
-            Meet Our Team
-          </h2>
-          <p class="fs-5">
-            Seasoned experts and fresh talent—working together to bring
-            unmatched comfort and style to your home.
-          </p>
-        </div>
-      </div>
-
-      <div class="row g-4 justify-content-center d-flex align-items-stretch">
-        <!-- Team Member 1 -->
-        <div class="col-sm-6 col-md-4 col-lg-3 d-flex">
-          <div class="card h-100 bg-white shadow-sm flex-fill text-center">
-            <div class="card-body d-flex flex-column align-items-center justify-content-center">
-              <img
-                src="https://via.placeholder.com/150?text=Stephen"
-                alt="Stephen Honeywood"
-                class="rounded-circle mb-3 team-photo"
-                style="width:120px; height:120px; object-fit:cover;"
-              />
-              <h4 class="text-brown">Stephen Honeywood</h4>
-              <p class="fst-italic mb-1">Co-Founder &amp; Master Fitter</p>
-              <p class="small mb-0">
-                Over 40 years of know-how, ensuring every project meets
-                our high standards.
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Team Member 2 -->
-        <div class="col-sm-6 col-md-4 col-lg-3 d-flex">
-          <div class="card h-100 bg-white shadow-sm flex-fill text-center">
-            <div class="card-body d-flex flex-column align-items-center justify-content-center">
-              <img
-                src="https://via.placeholder.com/150?text=Maxine"
-                alt="Maxine Phillips"
-                class="rounded-circle mb-3 team-photo"
-                style="width:120px; height:120px; object-fit:cover;"
-              />
-              <h4 class="text-brown">Maxine Phillips</h4>
-              <p class="fst-italic mb-1">Co-Founder &amp; Operations</p>
-              <p class="small mb-0">
-                The friendly voice arranging schedules and ensuring
-                smooth, stress-free service.
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Add more team members as needed -->
-      </div>
-    </div>
-  </section>
+  <!-- REMOVED: MEET OUR TEAM SECTION (as requested) -->
 
   <!-- COVERAGE SECTION (Cream background) -->
   <section class="about-mission-cream text-center">
@@ -270,13 +205,13 @@
             Serving Hertfordshire &amp; Beyond
           </h2>
           <p class="fs-5">
-            Based in Hatfield, we travel within a
-            <strong>20–40 mile radius</strong>—and can go further for larger projects.
+            Based in St Albans first and travelling within a <strong>20–40 mile radius</strong>—and can go further for larger projects.
           </p>
         </div>
       </div>
       <div class="row align-items-center g-5 justify-content-center">
         <div class="col-md-6">
+          <!-- You will change the image to show more carpet later if desired -->
           <img
             src="hertfordshire.jpg"
             alt="Coverage map"
@@ -285,8 +220,9 @@
         </div>
         <div class="col-md-6 text-start">
           <ul class="list-unstyled fs-5 mb-4">
-            <li>• Welwyn Garden City</li>
+            <!-- Putting St Albans first if listing locations here -->
             <li>• St Albans</li>
+            <li>• Welwyn Garden City</li>
             <li>• Harpenden</li>
             <li>• Cheshunt</li>
             <li>• Stevenage</li>
@@ -311,8 +247,9 @@
       <h2 class="section-heading mb-3">
         Ready to Refresh Your Floors?
       </h2>
+      <!-- Changed "our family is here" to "we are here" -->
       <p class="fs-5 mb-4">
-        Get in touch today—our family is here to help yours achieve the perfect floor.
+        Get in touch today—we are here to help you achieve the perfect floor.
       </p>
       <a href="contact.html" class="btn btn-tan btn-lg">
         Request a Quote
@@ -327,7 +264,7 @@
       <p>Proudly serving Hertfordshire &amp; surrounding areas</p>
       <p>
         Call: 07768 106205 |
-        Email: <a href="mailto:info@softtouchcarpets.com" style="color:white;">info@softtouchcarpets.com</a>
+        Email: <a href="mailto:softtouchcarpets100@gmail.com" style="color:white;">softtouchcarpets100@gmail.com</a>
       </p>
     </div>
   </footer>
