--- a/contact.html
+++ b/contact.html
@@ -20,11 +20,11 @@
   <title>Contact Soft Touch Carpets &amp; Elegant Edges | Hertfordshire Flooring Experts</title>
   <meta
     name="description"
-    content="Get in touch with Soft Touch Carpets & Elegant Edges for free measures, quotes, or more information on carpet fitting, stair runners, vinyl, and custom mats."
+    content="Get in touch with Soft Touch Carpets & Elegant Edges for free measures, quotes, or more information on carpet fitting, stairs & landing carpet, vinyl, and custom mats."
   />
   <meta
     name="keywords"
-    content="contact, carpeting, stair runners, vinyl flooring, mat services, Hertfordshire"
+    content="contact, carpeting, stairs & landing carpet, vinyl flooring, mat services, Hertfordshire"
   />
 
   <!-- Google Fonts (Playfair Display, Montserrat, Nunito) -->
@@ -33,11 +33,9 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700;900&family=Montserrat:wght@400;700&family=Nunito:wght@300;400;700&display=swap"
     rel="stylesheet"
-  >
+  />
 
-  <!-- Web3Forms (Replace 'YOUR_ACCESS_KEY' with your actual key) -->
-
-  <!-- Client-side spam check for "seo"/"top google"; honeypot usage. -->
+  <!-- Client-side spam check & honeypot usage -->
   <script defer>
     document.addEventListener('DOMContentLoaded', () => {
       const messageInput = document.getElementById('message');
@@ -57,8 +55,8 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-brown sticky-top shadow-sm">
     <div class="container">
       <a class="navbar-brand d-flex flex-column text-lg-start" href="index.html">
-        <span class="fw-bold fs-5">Soft Touch</span>
-        <span class="fs-6">Carpets & Elegant Edges</span>
+        <span class="fw-bold fs-5">Soft Touch Carpets</span>
+        <span class="fs-6">& Elegant Edges</span>
       </a>
       <button
         class="navbar-toggler"
@@ -75,7 +73,7 @@
       <div class="collapse navbar-collapse justify-content-end" id="mainNavbar">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" href="index.html">Home</a>
+            <a class="nav-link " href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
@@ -84,7 +82,7 @@
             <a class="nav-link" href="services.html">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link active" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -111,14 +109,14 @@
         <div class="col-lg-6">
           <h2 class="section-heading mb-4">Get a Quote</h2>
           <p class="fs-5 mb-4">
-            Whether you have a question about our carpet fitting, stair runner services,
+            Whether you have a question about our carpet fitting, stairs &amp; landing carpet,
             vinyl flooring, or want a free quote, our team is here to help.
           </p>
           <ul class="list-unstyled fs-5">
+            <!-- Replaced full address with St Albans, Herts -->
             <li class="mb-3">
               <span class="fw-semibold">Address:</span><br/>
-              2 Warren Close,<br/>
-              Hatfield, Herts, AL10 0AL
+              St Albans, Herts
             </li>
             <li class="mb-3">
               <span class="fw-semibold">Call Us:</span><br/>
@@ -127,7 +125,7 @@
             </li>
             <li class="mb-3">
               <span class="fw-semibold">Email:</span><br/>
-              info@softtouchcarpets.com
+              softtouchcarpets100@gmail.com
             </li>
           </ul>
           <p class="small text-muted">
@@ -136,7 +134,7 @@
           </p>
         </div>
 
-        <!-- Embedded Map -->
+        <!-- Embedded Map (Shows Hatfield area by default; remove or replace if desired) -->
         <div class="col-lg-6">
           <div class="map-wrapper position-relative rounded shadow overflow-hidden">
             <iframe
@@ -258,7 +256,7 @@
   <footer class="border-top py-4 bg-brown">
     <div class="container text-center">
       <p class="mb-1">&copy; 2025 Soft Touch Carpets &amp; Elegant Edges</p>
-      <p class="mb-0">Family-Run, NVQ-Qualified, Serving Hertfordshire &amp; Beyond</p>
+      <p class="mb-0">Serving Hertfordshire &amp; Beyond</p>
     </div>
   </footer>
 
