--- a/services.html
+++ b/services.html
@@ -16,14 +16,14 @@
   <!-- Services Page Styles -->
   <link rel="stylesheet" href="services.css" />
 
-  <title>Professional Carpet Fitting &amp; Stair Runner Services | Hertfordshire</title>
+  <title>Professional Carpet Fitting &amp; Flooring Services | Hertfordshire</title>
   <meta 
     name="description" 
-    content="Explore Soft Touch Carpets & Elegant Edges for carpet fitting near you, stair runner installation, vinyl flooring, and custom mat services. Over 40 years of expertise in Hertfordshire." 
+    content="Explore Soft Touch Carpets & Elegant Edges for carpet fitting near you, stairs & landing carpet, vinyl flooring, and custom mat services. With 38 years experience in Hertfordshire." 
   />
   <meta 
     name="keywords" 
-    content="carpet fitters near me, carpet fitting, stair runner installation, vinyl flooring Hertfordshire, cost for carpet fitting, custom mat whipping" 
+    content="carpet fitters near me, carpet fitting, stairs landing carpet, vinyl flooring Hertfordshire, custom mat whipping, 38 years experience" 
   />
 
   <!-- Google Fonts (Playfair Display, Montserrat, Nunito) -->
@@ -40,7 +40,7 @@
     "@context": "https://schema.org",
     "@type": "LocalBusiness",
     "name": "Soft Touch Carpets & Elegant Edges",
-    "description": "Carpet fitting, stair runner installation, vinyl flooring, and custom mat services in Hertfordshire.",
+    "description": "Carpet fitting, stairs & landing carpet, vinyl flooring, and custom mat services in Hertfordshire, with 38 years experience.",
     "telephone": "+44 7768 106205",
     "address": {
       "@type": "PostalAddress",
@@ -61,8 +61,8 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-brown sticky-top shadow-sm ">
     <div class="container">
       <a class="navbar-brand d-flex flex-column text-lg-start" href="index.html">
-        <span class="fw-bold fs-5">Soft Touch</span>
-        <span class="fs-6">Carpets & Elegant Edges</span>
+        <span class="fw-bold fs-5">Soft Touch Carpets</span>
+        <span class="fs-6">& Elegant Edges</span>
       </a>
       
       <button 
@@ -80,16 +80,16 @@
       <div class="collapse navbar-collapse justify-content-end" id="mainNavbar">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" href="index.html">Home</a>
+            <a class="nav-link " href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="services.html">Services</a>
+            <a class="nav-link active" href="services.html">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link " href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -100,11 +100,12 @@
   <header class="hero-section d-flex align-items-center justify-content-center">
     <div class="hero-overlay"></div>
     <div class="container text-center text-white">
+      <!-- Changed "Over 40 years" to "with 38 years experience" -->
       <h1 class="display-4 hero-title mb-3">
         Transform Your Floors With Expert Care
       </h1>
       <p class="lead fw-normal">
-        Over 40 years' experience in carpet fitting, stair runner installation, 
+        With 38 years experience in carpet fitting, stairs &amp; landing carpet, 
         vinyl flooring, and custom mat solutions for Hertfordshire &amp; beyond.
       </p>
       <a href="contact.html" class="btn btn-tan btn-lg mt-4">
@@ -114,7 +115,6 @@
   </header>
 
   <!-- INTRO SECTION (WAVE DIVIDER TOP) -->
- 
   <section class="services-intro-section py-5 bg-cream">
     <div class="container">
       <div class="row text-center mb-5">
@@ -123,19 +123,16 @@
             Our Flooring Services
           </h2>
           <p class="fs-5">
-            Whether you need plush carpets, stylish stair runners, or durable vinyl for high-traffic areas, 
-            Soft Touch Carpets &amp; Elegant Edges has you covered. We also provide bespoke mat whipping 
-            to make the most of your leftover materials. Explore our services below and see why 
-            customers across Hertfordshire trust us for quality flooring.
+            Whether you need plush carpets, durable vinyl for high-traffic areas, 
+            or bespoke mat whipping to make use of leftovers, Soft Touch Carpets &amp; Elegant Edges has you covered. 
+            Explore our services below to see why customers across Hertfordshire trust us for quality flooring.
           </p>
         </div>
       </div>
     </div>
   </section>
 
- 
   <!-- SERVICE SECTION: CARPET FITTING -->
-  <!-- Using a brown background, white text for contrast -->
   <section class="py-5" style="background-color: var(--brown); color: #fff;">
     <div class="container">
       <div class="row align-items-center mb-5">
@@ -152,15 +149,15 @@
           </h3>
           <p class="mt-3">
             Our NVQ-qualified installers are experts at fitting carpets of all types—from luxury Saxony 
-            and durable twist piles to budget-friendly bleach-cleanable options. We handle the entire process 
+            and durable twist piles to budget-friendly options. We handle the entire process 
             including underlay, grippers, and door strips to ensure a perfect finish.
           </p>
           <ul class="list-unstyled mb-3">
             <li>• <strong>Free measuring</strong> in the comfort of your home</li>
-            <li>• Competitive pricing &amp; <strong>price matching</strong></li>
+            <!-- Removed price matching reference below -->
+            <li>• Competitive pricing</li>
             <li>• Quick turnaround &amp; high-quality workmanship</li>
           </ul>
-          <!-- Different color button for each service -->
           <a href="contact.html" class="btn" style="background-color: var(--tan); color: #fff;">
             Book a Carpet Fitting
           </a>
@@ -169,49 +166,13 @@
     </div>
   </section>
 
-  <!-- SERVICE SECTION: STAIR RUNNERS (WAVE DIVIDER TOP) -->
-  <!-- Cream background, darker text -->
- 
+  <!-- REMOVED: STAIR RUNNER INSTALLATION SECTION COMPLETELY -->
+
+  <!-- SERVICE SECTION: VINYL FLOORING -->
   <section class="py-5 bg-cream">
     <div class="container">
       <div class="row align-items-center mb-5 flex-md-row-reverse">
         <div class="col-md-6 ps-md-5 mb-4 mb-md-0">
-          <img 
-            src="stair-runner-installation.jpg" 
-            alt="Stair runner installation example" 
-            class="img-fluid rounded shadow"
-          >
-        </div>
-        <div class="col-md-6">
-          <h3 class="text-brown" style="font-family: 'Montserrat', sans-serif;">
-            Stair Runner Installation
-          </h3>
-          <p class="mt-3">
-            Elevate your staircase with a custom-made runner. We offer a range of colours, patterns, 
-            and whipping finishes to reflect your personal style. Whether you prefer a bold stripe 
-            or a subtle solid tone, we’ll transform your stairs into a stunning focal point.
-          </p>
-          <ul class="list-unstyled mb-3">
-            <li>• <strong>Custom designs</strong> and edging</li>
-            <li>• Optional decorative rods for a timeless look</li>
-            <li>• Perfect for hallways, landings &amp; multi-level homes</li>
-          </ul>
-          <!-- Different color button -->
-          <a href="contact.html" class="btn" style="background-color: var(--brown); color: #fff;">
-            Transform Your Stairs
-          </a>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- SERVICE SECTION: VINYL FLOORING (WAVE DIVIDER BOTTOM) -->
-  <!-- Tan background, white text -->
-
-  <section class="py-5" style="background-color: var(--tan); color: #fff;">
-    <div class="container">
-      <div class="row align-items-center mb-5">
-        <div class="col-md-6 pe-md-5 mb-4 mb-md-0">
           <img 
             src="vinyl-flooring-2.jpg" 
             alt="Vinyl flooring example" 
@@ -219,7 +180,7 @@
           >
         </div>
         <div class="col-md-6">
-          <h3 style="font-family: 'Montserrat', sans-serif;">
+          <h3 class="text-brown" style="font-family: 'Montserrat', sans-serif;">
             Vinyl Flooring
           </h3>
           <p class="mt-3">
@@ -232,8 +193,7 @@
             <li>• Wide range of textures &amp; finishes</li>
             <li>• Expertly fitted for a flawless result</li>
           </ul>
-          <!-- Different color button -->
-          <a href="contact.html" class="btn" style="background-color: var(--brownish); color: #fff;">
+          <a href="contact.html" class="btn" style="background-color: var(--brown); color: #fff;">
             See Our Vinyl Range
           </a>
         </div>
@@ -241,10 +201,8 @@
     </div>
   </section>
 
-  <!-- SERVICE SECTION: CUSTOM MATS & WHIPPING (WAVE DIVIDER TOP) -->
-  <!-- Brownish background, white text -->
-  
-  <section class="py-5" style="background-color: var(--brownish); color: #fff;">
+  <!-- SERVICE SECTION: CUSTOM MATS & WHIPPING -->
+  <section class="py-5" style="background-color: var(--tan); color: #fff;">
     <div class="container">
       <div class="row align-items-center mb-5 flex-md-row-reverse">
         <div class="col-md-6 ps-md-5 mb-4 mb-md-0">
@@ -268,8 +226,7 @@
             <li>• Bespoke shapes &amp; sizes available</li>
             <li>• Save costs by upcycling offcuts</li>
           </ul>
-          <!-- Different color button -->
-          <a href="contact.html" class="btn" style="background-color: var(--cream); color: #3B2F2F;">
+          <a href="contact.html" class="btn" style="background-color: var(--brownish); color: #fff;">
             Personalise Your Mats
           </a>
         </div>
@@ -277,7 +234,7 @@
     </div>
   </section>
 
- 
+  <!-- RECENT PROJECTS SECTION -->
   <section class="py-5 bg-light">
     <div class="container">
       <div class="row mb-5 text-center">
@@ -290,7 +247,6 @@
         </div>
       </div>
       <div class="row g-4">
-        <!-- Replace with real images -->
         <div class="col-sm-6 col-lg-3">
           <img 
             src="completed-project-1.jpg"
@@ -323,7 +279,7 @@
     </div>
   </section>
 
-  <!-- TESTIMONIALS / CAROUSEL (WAVE DIVIDER TOP) -->
+  <!-- TESTIMONIALS / CAROUSEL -->
   <div class="wave-divider wave-top">
     <svg viewBox="0 0 500 50" preserveAspectRatio="none">
       <path d="M0,0 C150,50 350,0 500,50 L500,00 L0,0 Z" style="fill:#FFFDF9;"></path>
@@ -336,7 +292,7 @@
           <h2 class="section-heading">Our Happy Clients</h2>
           <p class="fs-5">
             See what our customers have to say about the quality of our work, 
-            from carpet fitting to bespoke stair runners.
+            from carpet fitting to custom mat whipping.
           </p>
         </div>
       </div>
@@ -370,7 +326,6 @@
               </footer>
             </div>
           </div>
-          <!-- Add more testimonials as needed -->
         </div>
         <button 
           class="carousel-control-prev" 
@@ -394,7 +349,7 @@
     </div>
   </section>
 
-  <!-- FAQ SECTION (WAVE DIVIDER BOTTOM) -->
+  <!-- FAQ SECTION -->
   <div class="wave-divider wave-bottom">
     <svg viewBox="0 0 500 50" preserveAspectRatio="none">
       <path d="M0,50 C150,0 350,50 500,0 L500,50 L0,50 Z" style="fill:#FFFDF9;"></path>
@@ -438,9 +393,9 @@
                 <div class="accordion-body">
                   <p>
                     Prices vary based on carpet quality, room size, and subfloor prep. 
-                    Our free measuring service ensures accurate quotes, and we often match 
-                    or beat local competitor pricing. Request a <a href="contact.html">free estimate</a> 
-                    to see how we compare.
+                    Our free measuring service ensures accurate quotes. Request a 
+                    <a href="contact.html">free estimate</a> to see how we compare.
+                    <!-- Removed mention of price matching here -->
                   </p>
                 </div>
               </div>
@@ -467,10 +422,11 @@
               >
                 <div class="accordion-body">
                   <p>
-                    Yes! We typically serve Hatfield, Welwyn Garden City, St Albans,
+                    Yes! We typically serve St Albans, Welwyn Garden City, Hatfield,
                     Cheshunt, Harpenden, and other nearby areas within a 20–40 mile radius.
                     For larger projects, we're happy to travel further—just 
                     <a href="contact.html">get in touch</a> to discuss your location.
+                    <!-- Swapped St Albans and Hatfield positions here -->
                   </p>
                 </div>
               </div>
@@ -505,7 +461,7 @@
       <p>Proudly serving Hertfordshire &amp; Beyond</p>
       <p>
         Call: 07768 106205 | Email: 
-        <a href="mailto:info@softtouchcarpets.com" style="color:#fff;">info@softtouchcarpets.com</a>
+        <a href="mailto:softtouchcarpets100@gmail.com" style="color:#fff;">softtouchcarpets100@gmail.com</a>
       </p>
     </div>
   </footer>
